book-db/k8s/author-api-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: authorapiservice-srv
spec:
  type: NodePort
  selector:
    app: authorapiservice
  ports:
    - name: authorapiservice
      protocol: TCP
      port: 80
      targetPort: 80
