book-db/k8s/book-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api-depl
spec:
  replicas: 1
  # selecting a container from template
  selector:
    matchLabels:
      app: bookapiservice
  # defining a container
  template:
    metadata:
      labels:
        app: bookapiservice
    spec:
      containers:
        - name: bookapiservice
          image: ryuichi24/bookdb-book-service:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  type: ClusterIP
  selector:
    app: bookapiservice
  ports:
    - name:  booksrvpt
      protocol: TCP
      port: 80
      targetPort: 80
