book-db/k8s/book-api-mysql-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-api-mysql
  template:
    metadata:
      labels:
        app: book-api-mysql
    spec:
      containers:
        - name: book-api-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: bookmysqlpt
---
apiVersion: v1
kind: Service
metadata:
  name: book-api-mysql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: book-api-mysql
  ports:
    - name: bookmysqlpt
      protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: book-api-mysql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: book-api-mysql
  ports:
    - name: bookmysqlpt
      protocol: TCP
      port: 3306
      targetPort: 3306
