book-db/k8s/comment-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-depl
spec:
  replicas: 3
  # selecting a container from template
  selector:
    matchLabels:
      app: commentapiservice
  # defining a container
  template:
    metadata:
      labels:
        app: commentapiservice
    spec:
      containers:
        - name: commentapiservice
          image: ryuichi24/bookdbcommentapiservice:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: commentapi-cluster-srv
spec:
  type: ClusterIP
  selector:
    app: commentapiservice
  ports:
  - name:  commentapiservice
    protocol: TCP
    port: 80
    targetPort: 80
